# StoryGame

./: Makefile  README.md  pyproject.toml  setup.cfg  text.txt
storygame/: Graph_Story.py  parser_mermaid.py
tests/: test_graph_story.py  test_parser_story.py
