[tool.poetry]
name = "storygame"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"
pytest = "^7.1.3"
pylint = "^2.15.3"
pytest-cov = "^4.0.0"
autoflake = "^1.6.1"
isort = "^5.10.1"
unify = "^0.5"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest-deadfixtures = "^2.2.1"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79